2008-06-05 - Sean Huber (shuber@einsteinindustries.com)
  * Renamed test files
  * find_current_user always returns current_user

2008-06-05 - Sean Huber (shuber@einsteinindustries.com)
  * Renamed login_required to authentication_required

2008-06-05 - Sean Huber (shuber@einsteinindustries.com)
  * Renamed @searched_for_current_user to @queried_for_current_user

2008-06-05 - Sean Huber (shuber@huberry.com)
	* Added extra uses_authentication field options
	* Updated README

2008-06-05 - Sean Huber (shuber@huberry.com)
	* current_user returns nil unless logged_in?
	* Updated README

2008-06-05 - Sean Huber (shuber@huberry.com)
	* Updated README

2008-06-05 - Sean Huber (shuber@huberry.com)
	* Updated README

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Updated README

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Updated README

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Controller no longer has to call uses_authentication - logic included automatically
	* Updated README

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Updated README

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Updated README

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Updated README

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Added functional tests

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Fixed functional test exception

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Controller and model must call uses_authentication

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Initial import from access_control_list repository
	* Login field is configurable